--- a/Quattra Comando/index.html
+++ b/Quattra Comando/index.html
@@ -8,7 +8,7 @@
     <title>Quattra Comando</title>
     <audio autoplay="autoplay">
     <source src="./sounds/bensound-scifi.mp3" type="audio/mp3" />
-      seu navegador não suporta HTML5
+      Seu navegador não suporta HTML5
     </audio>
   </head>
   <body>
@@ -19,8 +19,8 @@
        <button id="start-button">
       <img src="./images/start-button.png" alt="loading" width="150px" height="150px"/>
       </button>
+      <p>A loner pilot has to investigate the Quattra sector, dodging of incoming things... </p>
       <p>Use the left and right arrow to control your space ship, cadet!!!</p>
-      <p>It's a single homage at a game that I played when young!!!</p>
      </div>
     <div id="score-board">
       Score: <span id="score">0</span>
