--- a/Quattra Comando/index.html
+++ b/Quattra Comando/index.html
@@ -12,24 +12,30 @@
     </audio>
   </head>
   <body>
-
-    <div class="game-intro">
+  <div class="game-intro">
       <img src="./images/logo.png" alt="" class="logo-img" />
-      <br />
+      <br/>
        <button id="start-button">
-      <img src="./images/start-button.png" alt="loading" width="150px" height="150px"/>
+        <img src="./images/start-button.png" alt=""  width="150px" height="150px" />
       </button>
-      <p>A loner pilot has to investigate the Quattra sector, dodging of incoming things... </p>
-      <p>Use the left and right arrow to control your space ship, cadet!!!</p>
-     </div>
-    <div id="score-board">
+      <div class="game-plot">
+      <p> We're gona to the space.</p>
+      <p>Humans have apparently gotten pretty far ou and there seem to be aliens around. </p>
+      <p>A loner pilot has to investigate the Quattra sector. </p>
+      <p>After the lost of contact with the base, dodging of incoming things... </p>
+      <div>
+        <img src="./images/left.png" alt="" class="arrows-img" width="150px" height="150px" />
+        <img src="./images/right.png" alt="" class="arrows-img" width="150px" height="150px" />
+        </div>
+      </div>
+      <p>Use the left and right arrow to control your space ship, soldier!!!</p>
+      </div>
+     <div id="score-board">
       Score: <span id="score">0</span>
       </div>
-
-    <div id="game-board">
+      <div id="game-board">
       <canvas id="canvas" width="400" height="600"></canvas>
     </div>
-
-    <script type="text/javascript" src="script.js"></script>
+   <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
