--- a/Quattra Comando/index.html
+++ b/Quattra Comando/index.html
@@ -24,8 +24,7 @@
       <p>A loner pilot has to investigate the Quattra sector. </p>
       <p>After the lost of contact with the base, dodging of incoming things... </p>
       <div>
-        <img src="./images/left.png" alt="" class="arrows-img" width="150px" height="150px" />
-        <img src="./images/right.png" alt="" class="arrows-img" width="150px" height="150px" />
+        <img src="./images/hud.gif" alt="" class="arrows-img" width="450px" height="250px" />
         </div>
       </div>
       <p>Use the left and right arrow to control your space ship, soldier!!!</p>
